Subir archivos HTML y CSS

--- a/index.html
+++ b/index.html
@@ -92,23 +92,23 @@
                 <img src="imagenes/fotografo.jpg" alt="">
                 <h3>fotografo</h3>
                 <p>
-                    Mi nombre es Samuel Martinez, practico la fotografia hace 10 años, mi rama es la moda. Sera un gusto atenderte, ¡Mira mi portafolio
+                    Mi nombre es Samuel Martinez, practico la fotografia hace 10 años, mi rama es la moda. Sera un gusto atenderte, ¡Mira mi portafolio!
                 </p>
                 <p>
                     <td>$100.000</td>
                 </p>
-                <a href="#">Saber mas</a>
+                <a href="login.html" class="saber-mas-btn">Saber más</a>
              </div>
               <div class="services-1">
                 <img src="imagenes/chef.jpg" alt="">
                 <h3>chef</h3>
                 <p>
-                    Mi nombre es Juan Gomez, practico la cocina hace 5 años, especializado en reposteria. Sera un gusto atenderte, ¡Mira mi portafolio
+                    Mi nombre es Juan Gomez, practico la cocina hace 5 años, especializado en reposteria. Sera un gusto atenderte, ¡Mira mi portafolio!
                 </p>
                 <p>
                     <td>$60.000</td>
                 </p>
-                <a href="#">Saber mas</a>
+                <a href="login.html" class="saber-mas-btn">Saber más</a>
              </div>
               <div class="services-1">
                 <img src="imagenes/jardinero.jpg" alt="">
@@ -120,7 +120,7 @@
                 <p>
                     <td>$30.000</td>
                 </p>
-                <a href="#">Saber mas</a>
+                <a href="login.html" class="saber-mas-btn">Saber más</a>
              </div>
              <div class="services-1">
                 <img src="imagenes/profesor.jpg" alt="">
@@ -131,7 +131,7 @@
                 <p>
                     <td>$50.000</td>
                 </p>
-                <a href="#">Saber mas</a>
+                <a href="login.html" class="saber-mas-btn">Saber más</a>
              </div>
         </div>
     </main>
@@ -176,8 +176,7 @@
                 <h2>Soporte</h2>
                 <hr>
                 <p>
-                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates velit, accusamus totam alias
-                      cupiditate magnam laboriosam molestiae sint quas non et voluptate.
+                     ¿COMO PODEMOS AYUDARTE?
                 </p>
            </div>
            <div class="personal-group">
@@ -213,7 +212,7 @@
     <footer>
 
             <div class="footer-bg">
-                <h2>Reserva un Servicio</h2>
+                <h2>Sugerencias</h2>
 
                 <form>
                      <div class="campo-1">
@@ -227,13 +226,13 @@
                      </div>
                      <textarea class="campo" cols="30" rows="10" placeholder="Comentario"></textarea>
                      <input type="submit" value="Enviar" class="btn-1">
-                     <input type="submit" value="Registrarse" class="btn-1">
+                     <a href="login.html" class="btn-1">Registrarse</a>
                 </form>
 
             </div>
             <div class="footer-txt">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi necessitatibus, officiis aut nostrum blanditiis                 
+                    Create for Sebastian Gallego               
                 </p>
             </div>
     </footer>
@@ -253,6 +252,7 @@
             });
         });
     </script>
+
 </body>
 </html>
 
