Subir archivos HTML y CSS

--- a/index.html
+++ b/index.html
@@ -183,34 +183,32 @@
                 <div class="personal-1">
                      <img src="imagenes/notificacion2.png" alt="">
                      <h3>Notificaciones</h3>
-                     <!--<p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                     </p> -->
+                     <p>
+                        Lo más importante.
+                     </p> 
                      <a href="#"class="btn-1">Saber mas</a>
                 </div>
                 <div class="personal-1">
                      <img src="imagenes/ayuda.png" alt="">
                      <h3>Centro de Ayuda</h3>
-                     <!-- <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                     </p> -->
+                     <p>
+                        ¿Cómo podemos ayudarte?
+                     </p> 
                      <a href="#"class="btn-1">Saber mas</a>
                 </div>
                 <div class="personal-1">
                      <img src="imagenes/calendario.png" alt="">
                      <h3>Mis Reservas</h3>
-                     <!--<p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                     </p> -->
+                     <p>
+                        Solicitudes generales.
+                     </p>
                      <a href="#"class="btn-1">Saber mas</a>
                 </div>
            </div>
-           <a href="#" class="btn-1">ayuda</a>
     </section>
     </section>
 
     <footer>
-
             <div class="footer-bg">
                 <h2>Sugerencias</h2>
 
